atualização de layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <title>Lucena Engenharia</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <script src="code.js"></script>
+
 </head>
 
 <body>
@@ -12,15 +14,17 @@
 
         <div id="side">
             <img id="perfil" src="imagens/Apresentação1/Slide1.JPG">
-            LUCENA ENGENHARIA <br>
-            Projetos Estruturais
+            <h2 style="color: #C9C9C9;"> LUCENA ENGENHARIA</h2> <br>
+            <P>Projetos Estruturais
+                Idealizado pelo Engenheiro Civil Roberto Nascimento Lucena, que orientou sua carreira para
+                projetos residenciais de alto-padrão, sobretudo estruturas em concreto armado.</P>
         </div>
 
         <div id="main">
-            <h1>Portifólio</h1>
+            <h1 style="font-size: 4vw;">CONHEÇA NOSSOS SERVIÇOS</h1>
             <div id="linha"></div>
             <div class="box">
-                <img class="imgprojetos" src="imagens/Apresentação1/Estrutural.png">
+                <img class="imgprojetosleft" src="imagens/Apresentação1/Estrutural.png">
                 <div class="textprojetosright">
                     <h2>PROJETOS ESTRUTURAIS</h2>
                     <div id="linha1"></div>
@@ -39,26 +43,26 @@
                         (Estrutural, Hidrossanitário e Elétrico) para que não ocorram surpresas indesejadas na obra.
                     </p>
                 </div>
-                <img class="imgprojetos" src="imagens/Apresentação1/Compatibilização.png">
+                <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
             </div>
-            <div class="box">Projeto 4</div>
+            <div class="box"></div>
         </div>
 
         <div id="sideright">
             <button onclick="telefone()">
-                Telefone
+                <i class="fab fa-whatsapp" style="font-size: 5vw; color: #901615; background-color: black;"></i>
             </button>
             <div id="telefone"></div>
             <button onclick="email()">
-                E-mail
+                <i class="far fa-envelope" style="font-size: 5vw; color: #901615; background-color: black;"></i>
             </button>
             <div id="email"></div>
             <a href="https://www.instagram.com/lucena.eng/"><button>
-                    Instagram
+                    <i class="fab fa-instagram" style="font-size: 5vw; color: #901615; background-color: black;"></i>
                 </button></a>
             <div></div>
             <a href="https://www.linkedin.com/in/robertolucena/"><button>
-                    LinkedIn
+                    <i class="fab fa-linkedin" style="font-size: 5vw; color: #901615; background-color: black;"></i>
                 </button></a>
             <div></div>
 
