--- a/index.html
+++ b/index.html
@@ -50,19 +50,23 @@
 
         <div id="sideright">
             <button onclick="telefone()">
-                <i class="fab fa-whatsapp" style="font-size: 5vw; color: #901615; background-color: black;"></i>
+                <i class="fab fa-whatsapp" style="font-size: 4.5vw; color: #901615; background-color: black;"></i>
             </button>
             <div id="telefone"></div>
             <button onclick="email()">
-                <i class="far fa-envelope" style="font-size: 5vw; color: #901615; background-color: black;"></i>
+                <i class="far fa-envelope" style="font-size: 4.5vw; color: #901615; background-color: black;"></i>
             </button>
             <div id="email"></div>
             <a href="https://www.instagram.com/lucena.eng/"><button>
-                    <i class="fab fa-instagram" style="font-size: 5vw; color: #901615; background-color: black;"></i>
+                    <i class="fab fa-instagram" style="font-size: 4.5vw; color: #901615; background-color: black;"></i>
                 </button></a>
             <div></div>
             <a href="https://www.linkedin.com/in/robertolucena/"><button>
-                    <i class="fab fa-linkedin" style="font-size: 5vw; color: #901615; background-color: black;"></i>
+                    <i class="fab fa-linkedin" style="font-size: 4.5vw; color: #901615; background-color: black;"></i>
+                </button></a>
+            <div></div>
+            <a href="https://github.com/RobertoLucena"><button>
+                    <i class="fab fa-github" style="font-size: 4.5vw; color: #901615; background-color: black;"></i>
                 </button></a>
             <div></div>
 
