--- a/index.html
+++ b/index.html
@@ -45,6 +45,94 @@
                 </div>
                 <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
             </div>
+            <div class="box">
+                <img class="imgprojetosleft" src="imagens/Apresentação1/Estrutural.png">
+                <div class="textprojetosright">
+                    <h2>PROJETOS ESTRUTURAIS</h2>
+                    <div id="linha1"></div>
+                    <p>Soluções estruturais em concreto armado seguras e ecônomicas.
+                        Observando as considerações das normas ABNT assim como as boas
+                        práticas de projetos estruturais.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="textprojetosleft">
+                    <h2>COMPATIBILIZAÇÃO DE PROJETOS</h2>
+                    <div id="linha1"></div>
+                    <p>Compatibilização com projetos complementares como hidrossanitário elétrico.
+                        É importante que o projestista preveja as interferências entre as disciplinas
+                        (Estrutural, Hidrossanitário e Elétrico) para que não ocorram surpresas indesejadas na obra.
+                    </p>
+                </div>
+                <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
+            </div>
+            <div class="box">
+                <img class="imgprojetosleft" src="imagens/Apresentação1/Estrutural.png">
+                <div class="textprojetosright">
+                    <h2>PROJETOS ESTRUTURAIS</h2>
+                    <div id="linha1"></div>
+                    <p>Soluções estruturais em concreto armado seguras e ecônomicas.
+                        Observando as considerações das normas ABNT assim como as boas
+                        práticas de projetos estruturais.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="textprojetosleft">
+                    <h2>COMPATIBILIZAÇÃO DE PROJETOS</h2>
+                    <div id="linha1"></div>
+                    <p>Compatibilização com projetos complementares como hidrossanitário elétrico.
+                        É importante que o projestista preveja as interferências entre as disciplinas
+                        (Estrutural, Hidrossanitário e Elétrico) para que não ocorram surpresas indesejadas na obra.
+                    </p>
+                </div>
+                <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
+            </div>
+            <div class="box">
+                <img class="imgprojetosleft" src="imagens/Apresentação1/Estrutural.png">
+                <div class="textprojetosright">
+                    <h2>PROJETOS ESTRUTURAIS</h2>
+                    <div id="linha1"></div>
+                    <p>Soluções estruturais em concreto armado seguras e ecônomicas.
+                        Observando as considerações das normas ABNT assim como as boas
+                        práticas de projetos estruturais.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="textprojetosleft">
+                    <h2>COMPATIBILIZAÇÃO DE PROJETOS</h2>
+                    <div id="linha1"></div>
+                    <p>Compatibilização com projetos complementares como hidrossanitário elétrico.
+                        É importante que o projestista preveja as interferências entre as disciplinas
+                        (Estrutural, Hidrossanitário e Elétrico) para que não ocorram surpresas indesejadas na obra.
+                    </p>
+                </div>
+                <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
+            </div>
+            <div class="box">
+                <img class="imgprojetosleft" src="imagens/Apresentação1/Estrutural.png">
+                <div class="textprojetosright">
+                    <h2>PROJETOS ESTRUTURAIS</h2>
+                    <div id="linha1"></div>
+                    <p>Soluções estruturais em concreto armado seguras e ecônomicas.
+                        Observando as considerações das normas ABNT assim como as boas
+                        práticas de projetos estruturais.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="textprojetosleft">
+                    <h2>COMPATIBILIZAÇÃO DE PROJETOS</h2>
+                    <div id="linha1"></div>
+                    <p>Compatibilização com projetos complementares como hidrossanitário elétrico.
+                        É importante que o projestista preveja as interferências entre as disciplinas
+                        (Estrutural, Hidrossanitário e Elétrico) para que não ocorram surpresas indesejadas na obra.
+                    </p>
+                </div>
+                <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
+            </div>
             <div class="box"></div>
         </div>
 
@@ -57,15 +145,15 @@
                 <i class="far fa-envelope" style="font-size: 4.5vw; color: #901615; background-color: black;"></i>
             </button>
             <div id="email"></div>
-            <a href="https://www.instagram.com/lucena.eng/"><button>
+            <a href="https://www.instagram.com/lucena.eng/" target="_blank"><button>
                     <i class="fab fa-instagram" style="font-size: 4.5vw; color: #901615; background-color: black;"></i>
                 </button></a>
             <div></div>
-            <a href="https://www.linkedin.com/in/robertolucena/"><button>
+            <a href="https://www.linkedin.com/in/robertolucena/" target="_blank"><button>
                     <i class="fab fa-linkedin" style="font-size: 4.5vw; color: #901615; background-color: black;"></i>
                 </button></a>
             <div></div>
-            <a href="https://github.com/RobertoLucena"><button>
+            <a href="https://github.com/RobertoLucena" target="_blank"><button>
                     <i class="fab fa-github" style="font-size: 4.5vw; color: #901615; background-color: black;"></i>
                 </button></a>
             <div></div>
