--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Lucena Engenharia</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <link rel="alternate" media="only screen and (max-width: 640px)"
+        href="https://imasters.com.br/design-ux/10-dicas-para-adaptar-sites-web-para-dispositivos-moveis-parte-01">
     <script src="code.js"></script>
-
+    ''
 </head>
 
 <body>
@@ -56,84 +58,6 @@
                     </p>
                 </div>
             </div>
-            <div class="box">
-                <div class="textprojetosleft">
-                    <h2>COMPATIBILIZAÇÃO DE PROJETOS</h2>
-                    <div id="linha1"></div>
-                    <p>Compatibilização com projetos complementares como hidrossanitário elétrico.
-                        É importante que o projestista preveja as interferências entre as disciplinas
-                        (Estrutural, Hidrossanitário e Elétrico) para que não ocorram surpresas indesejadas na obra.
-                    </p>
-                </div>
-                <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
-            </div>
-            <div class="box">
-                <img class="imgprojetosleft" src="imagens/Apresentação1/Estrutural.png">
-                <div class="textprojetosright">
-                    <h2>PROJETOS ESTRUTURAIS</h2>
-                    <div id="linha1"></div>
-                    <p>Soluções estruturais em concreto armado seguras e ecônomicas.
-                        Observando as considerações das normas ABNT assim como as boas
-                        práticas de projetos estruturais.
-                    </p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="textprojetosleft">
-                    <h2>COMPATIBILIZAÇÃO DE PROJETOS</h2>
-                    <div id="linha1"></div>
-                    <p>Compatibilização com projetos complementares como hidrossanitário elétrico.
-                        É importante que o projestista preveja as interferências entre as disciplinas
-                        (Estrutural, Hidrossanitário e Elétrico) para que não ocorram surpresas indesejadas na obra.
-                    </p>
-                </div>
-                <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
-            </div>
-            <div class="box">
-                <img class="imgprojetosleft" src="imagens/Apresentação1/Estrutural.png">
-                <div class="textprojetosright">
-                    <h2>PROJETOS ESTRUTURAIS</h2>
-                    <div id="linha1"></div>
-                    <p>Soluções estruturais em concreto armado seguras e ecônomicas.
-                        Observando as considerações das normas ABNT assim como as boas
-                        práticas de projetos estruturais.
-                    </p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="textprojetosleft">
-                    <h2>COMPATIBILIZAÇÃO DE PROJETOS</h2>
-                    <div id="linha1"></div>
-                    <p>Compatibilização com projetos complementares como hidrossanitário elétrico.
-                        É importante que o projestista preveja as interferências entre as disciplinas
-                        (Estrutural, Hidrossanitário e Elétrico) para que não ocorram surpresas indesejadas na obra.
-                    </p>
-                </div>
-                <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
-            </div>
-            <div class="box">
-                <img class="imgprojetosleft" src="imagens/Apresentação1/Estrutural.png">
-                <div class="textprojetosright">
-                    <h2>PROJETOS ESTRUTURAIS</h2>
-                    <div id="linha1"></div>
-                    <p>Soluções estruturais em concreto armado seguras e ecônomicas.
-                        Observando as considerações das normas ABNT assim como as boas
-                        práticas de projetos estruturais.
-                    </p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="textprojetosleft">
-                    <h2>COMPATIBILIZAÇÃO DE PROJETOS</h2>
-                    <div id="linha1"></div>
-                    <p>Compatibilização com projetos complementares como hidrossanitário elétrico.
-                        É importante que o projestista preveja as interferências entre as disciplinas
-                        (Estrutural, Hidrossanitário e Elétrico) para que não ocorram surpresas indesejadas na obra.
-                    </p>
-                </div>
-                <img class="imgprojetosright" src="imagens/Apresentação1/Compatibilização.png">
-            </div>
-            <div class="box"></div>
         </div>
 
         <div id="sideright">
